            -heading size calibration
            -invert archive titles
        ==design==
            -adopt colours to color palette
        -add translations to new texts.
        
        commit #16.5.10
        20 May, 2016
            ==bug==
                -submenu wasnot displayed properly if width < 960px
            ==typography==
                -breadcrumb last item strong
                
        commit #16.5.11
        21 May, 2016
        Upladed to repository as 16.5
            ==validation==
                -check with validator checker
                -delete itemprop values
                -delete unnecessary WAI-ARIA
            ==responsivie design==
                -correct margins
            ==prepare to upload to WordPress repository
            -refresh screenshot,
            -new: screenshot for moblie
            -minify css
            

    commit #16.5.13
    27 May, 2016
    This was uploaded to repository as 16.5.2
        == bugs ==
            -menu dropdown was not displayed in mobile
            -tag.php runds into fatal error
            -I made header #s individual (the same in widget) also corrected in css
    
    commit #16.5.14
    This was uploaded to repository as 16.5.3
            ==bug==
            search did not work. Because individual header. Reverse the changes in last commit, and fix css accordingly.
            -delete some depreciated tags from css
            -footer design: set equal padding each side
            -two column change the width a little bit (sidebar from 23 to 28%;)
        
        
Version 16.6
    
    commit #16.6.1
    6 June, 2016
        - remove all background property (make more simplier) Using always background-color.
        - add archive.php
        - add new texts to po and mo (originated from archive.php)
        - add manduca_background_images filter to header.php
        - coding format: add tabs to header.php to make it clearer.
        
        
    
        